<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">58USB测试</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="open">打开一个PL2030设备</string>
    <string name="open2">打开另一个PL2030设备</string>
    <string name="close">关闭已打开的设备</string>
    <string name="clear">清空接收</string>
    <string name="enumerate">枚举并选择一个设备</string>
    <string name="enumerate2">枚举并选择另一个设备</string>
    <string name="read">读</string>
    <string name="write">写</string>
    <string name="baudrate">波特率</string>
    <string name="databits">数据位</string>
    <string name="stopbits">停止位</string>
    <string name="parity">效验位</string>
    <string name="flowcontrol">流控制</string>
    <string name="help">设备打开后，可以设置波特率等参数，按设置即可生效。</string>
    <string name="set">设置</string>

</resources>
